--- a/.github/workflows/main_cuentalineas.yml
+++ b/.github/workflows/main_cuentalineas.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
-          name: 'CuentaLineas'
+          name: java-app
           path: '${{ github.workspace }}/target/*.jar'
 
   deploy:
