--- a/.github/workflows/main_cuentalineas.yml
+++ b/.github/workflows/main_cuentalineas.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: linux
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
@@ -31,7 +31,7 @@ jobs:
           path: '${{ github.workspace }}/target/*.jar'
 
   deploy:
-    runs-on: linux
+    runs-on: ubuntu-latest
     needs: build
     environment:
       name: 'Production'
@@ -49,5 +49,5 @@ jobs:
         with:
           app-name: 'CuentaLineas'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_27D8B4564B054256A7DB44BAAECBD22C }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_21AF6C46BA654DE780D6371316F97F18 }}
           package: '*.jar'
