Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_cuentalineas.yml
+++ b/.github/workflows/main_cuentalineas.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: linux
+    runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v2
@@ -31,12 +31,12 @@ jobs:
           path: '${{ github.workspace }}/target/*.jar'
 
   deploy:
-    runs-on: linux
+    runs-on: windows-latest
     needs: build
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
@@ -49,5 +49,5 @@ jobs:
         with:
           app-name: 'CuentaLineas'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_21AF6C46BA654DE780D6371316F97F18 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_5EA87BF501DC4C558736BF9F9E2EFE00 }}
           package: '*.jar'
